# ST-to-Python-Transpiler

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements.txt
1to1/Ramp/: Program.py  Ramp_lib.py  program_log.txt
1to1/Signal/: Program.py  SignalProcess_lib.py  program_log.txt
1to1_replace/Ramp/: Program.py
1to1_replace/Signal/: Program.py
AS Projekti/MySignalTools/Libraries/: Package.pkg
AS Projekti/MySignalTools/Libraries/SignalLib/: IEC.lby  SignalIntegrator.ab  SignalLib.fun  SignalLimiter.ab  ToggleDebounce.ab
AS Projekti/MySignalTools/Program/: IEC.prg  SignalProcess.st  Variables.var
AS Projekti/RampController/Libraries/: Package.pkg
AS Projekti/RampController/Libraries/RampLib/: DeadbandFilter.ab  IEC.lby  RampController.ab  RampLib.fun
AS Projekti/RampController/Program/: IEC.prg  Ramp.st  Variables.var
Python/functions/: common_functions.txt
Python/outputs/: Ramp_output.txt  SignalProcess_lib.py  SignalProcess_output.txt  UserRole_output.txt
Python/skripte/: api_req.py  compare_functions.py  config.py  make.py  replace.py  skripta_naming.py
Python/testiranje/: test.py
py_libs/ArUser/: ArUser.py
py_libs/RampController/: RampLib.py
py_libs/SignalLib/: SignalLib.py
